# data-feed-engine

./: .gitignore  README.md  pyproject.toml
configs/: reddit_posts.json  reddit_posts_config.json
data_pipeline_config/: reddit_posts_config.json
notebooks/: data_validation.ipynb
sql/: r_posts.sql
src/: base_datasource.py
src/data_feed_engine/: __init__.py  base_datasource.py  cli.py  db_feed.py  main.py  runner.py
src/data_feed_engine/core/: cli.py  metrics.py
src/data_feed_engine/datasources/: base.py  jdbc.py  s3.py
src/data_feed_engine/factory/: factory.py  registry.py
src/data_feed_engine/feeds/: base.py  reddit_posts.py
src/data_feed_engine/utils/: config.py
src/sql/: r_posts.sql
src/utils/: config.py  data_schema.py
