[project]
name = "data-feed-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rohit Kumar", email = "r.kumar01@hotmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "fastparquet>=2024.11.0",
    "isort>=6.0.1",
    "jupyter>=1.1.1",
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
    "pydantic>=2.11.5",
    "pyspark==3.5.5",
    "pytest>=8.4.0",
    "python-dotenv>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
